# simple-todos-api

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_todos_table.rs  m20260620_070836_create_users_table.rs  m20260621_035326_add_email_to_users.rs  m20260622_133334_add_user_id_to_todos.rs
src/: auth.rs  database.rs  handlers.rs  main.rs  middleware.rs  models.rs  store.rs
src/entities/: mod.rs  prelude.rs  todos.rs  users.rs
src/helper/: resp.rs
