[package]
name = "todo-list-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version =  "0.8.9", features = ["json", "macros"] }
bcrypt = "0.19.2"
chrono = "0.4.45"
derive = "1.0.0"
dotenv = "0.15.0"
features = "0.10.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version =  "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
